[package]
name = "typescript-test2"
version = "0.1.0"
authors = ["Ian Castleden <ian.castleden@gmail.com>"]
edition = "2018"

[lib]
name = "mywasm"
path = "src/interface.rs"
crate-type = ["cdylib"]

[dependencies]

serde = { version = "1.0.87", features = ["derive"] }
serde_json = "1"
typescript-definitions = { version="0.1",  path = "../wasm-typescript-definition", features=["verifiers"] }
wasm-bindgen = "0.2"

regex = "1.1.0"
